# breakaway-ai

./: .env  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  app.py  breakaway_memory.db  deploy.sh  habits.py  pyproject.toml  requirements.md  requirements.txt  sample_workouts.csv
.github/workflows/: deploy-to-prod.yaml  staging.yaml
app/: agent.py  fast_api_app.py  memory.py  multi_agent.py  observability.py  optimizer.py  parser.py  physiology.py  tools.py
app/app_utils/: telemetry.py  typing.py
deployment/terraform/cicd/: variables.tf
deployment/terraform/cicd/vars/: env.tfvars
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
eval/: eval_config.json  eval_dataset.json
infra/terraform/: main.tf  outputs.tf  variables.tf
submission_frontend/: main.py  pyproject.toml  test_main.py
tests/: test_adk_agent.py  test_optimizer.py  test_parser.py  test_physiology.py
