[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "submission-frontend"
version = "0.1.0"
description = "Manager Dashboard Service for ADK Agent Runtime Approvals"
authors = [{ name = "Miles Hudgins", email = "mileshudgins@google.com" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.45.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
